<resources>
    <string name="app_name">BookMate</string>
    <string name="home">Library</string>
    <string name="settings">Settings</string>
    <string name="book_wants">BookWants</string>
    <string name="wishlist">Wishlist</string>
    <string name="recommendations">Recommendations</string>
    <string name="statistics">Statistics</string>
    <string name="add_new_book">Add New Book</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manual_search">Manual Search</string>
    <string name="search_by">Search by</string>
    <string name="search">Search</string>
    <string name="settings_option">Go to Settings</string>
    <string name="cancel_option">Cancel</string>
    <string name="permission_dialog_title">Permission Required</string>
    <string name="camera_permission_dialog_body">This app needs camera permission for barcode scanning.
        Please grant the permission in the app settings, otherwise continue with manual input.</string>
    <string name="gallery_permission_dialog_body">This app needs gallery permission for barcode scanning.
        Please grant the permission in the app settings, otherwise continue with sample cover.</string>
    <string name="genre">Genre</string>
    <string name="reading_status">Reading Status</string>
    <string name="borrowing_status">Borrowing Status</string>
    <string name="rating">Rating</string>
    <string name="emotional_impact">Emotional Impact</string>
    <string name="characters">Characters</string>
    <string name="pacing">Pacing</string>
    <string name="story_line">Story Line</string>
    <string name="writing_style">Writing Style</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="book_not_found">Book Not Found</string>
    <string name="sorry_we_couldn_t_find_your_book_would_you_like_to_manually_add_it">Sorry, we couldn\'t find your book. Would you like to manually add it</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="borrowed_by">Borrowed by</string>
    <string name="ok">OK</string>
    <string name="something_went_wrong">Something went wrong, please try again.</string>
    <string name="enter_search_value">Please enter search value</string>
    <string name="borrowing_details">Borrowing Details</string>
    <string name="sample">sample</string>
    <string name="author">Author</string>
    <string name="genre_1">Genre 1</string>
    <string name="genre_2">Genre 2</string>
    <string name="name">Name</string>
    <string name="logout">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="email">Email</string>
    <string name="choose_book_list_type">Choose Book Location </string>
    <string name="please_choose_to_where_would_you_like_to_add_this_book">Please choose where would you like to add this book</string>
    <string name="my_library">My Library</string>
    <string name="please_scan">Please scan the barcode of the book</string>
    <string name="empty_book_list_message">Your bookshelf is currently empty. Tap the plus icon to start adding books</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">save</string>
    <string name="for_you">For You</string>
    <string name="add_to_library">Add to Library</string>
    <string name="do_you_want_to_add_this_book_to_the_library">Do you want to add this book to the library?</string>

    <string-array name="search_options">
        <item>Title</item>
        <item>ISBN</item>
    </string-array>
    <string-array name="borrowing_options">
        <item>Borrowed</item>
        <item>Not Borrowed</item>
    </string-array>
    <string-array name="reading_options">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Paused</item>
        <item>Finished</item>
    </string-array>
</resources>